--- a/16testinheritance.html
+++ b/16testinheritance.html
@@ -17,5 +17,6 @@
             <li class="warning">ordered list 2</li>
             <li class="error">ordered list 3</li>
         </ol>
+        <p>Changes made to file on github page.</p>
     </body>
 </html>
