Test branch - move style to head

--- a/18mergeconflicts.html
+++ b/18mergeconflicts.html
@@ -3,10 +3,15 @@
     <head>
         <title>Merge Conflict</title> 
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
+        <style>
+            h1 {
+                color: blue;
+            }
+        </style>
     </head>
     <body>
 
-        <h1 style="color: blue;">Merge Conflict Git</h1> 
+        <h1>Merge Conflict Git</h1> 
 
     </body>
 </html>
