Changes on main branch, added paragraph.

--- a/18mergeconflicts.html
+++ b/18mergeconflicts.html
@@ -7,6 +7,6 @@
     <body>
 
         <h1 style="color: blue;">Merge Conflict Git</h1> 
-
+        <p>Changes on main branch.</p>
     </body>
 </html>
